Jsystem framework over Java 25, first commit